[package]
name = "ProtoVCS"
version = "0.1.0"
edition = "2024"

[dependencies]
# VCS Core
walkdir = "2"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"

# Networking & Auth
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
# FIX: Downgraded to 0.8.5 for compatibility
rand = { version = "0.8.5", features = ["std"] }
